--- a/nginx/polkascan-prod.conf
+++ b/nginx/polkascan-prod.conf
@@ -3,8 +3,17 @@ upstream polka-rchain-api {
   server polka-rchain-api:7001;
 }
 
+upstream harvester-api {
+  ip_hash;
+  server harvester-api:8000;
+}
+
 # portal
 server {
+    
+    location /api/v1/harvester {
+        proxy_pass http://harvester-api/;
+    }
 
     location /api/ {
         proxy_pass http://polka-rchain-api/api/;
